--- a/flex-box/index.html
+++ b/flex-box/index.html
@@ -61,99 +61,201 @@
     </div>
 
     <div class="layout-3">
-        <div class="left"></div>
-        <div class="right">
-            <div class="small"></div>
-            <div class="small"></div>
-            <div class="small"></div>
-            <div class="small"></div>
+        <div class="upper">
+            <div class=" lorem">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta expedita ex dolorem, est quam molestias
+                eum
+                delectus repellendus aut nisi doloremque quae, ullam saepe autem magnam ipsa cum neque cupiditate.
+            </div>
+
+        </div>
+        <div class="lower">
+            <div class="big-left">
+            </div>
+            <div class="big-right">
+                <div class="small"></div>
+                <div class="small"></div>
+                <div class="small"></div>
+                <div class="small"></div>
+            </div>
+
         </div>
     </div>
 
-
-    <div class="card">
-        <div class="top">
-            <div class="circle"></div>
-
-            <p class="text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                anim id est laborum.
-            </p>
+    <div class="layout4">
+        <div class="upper4">
+            <div class="pink-dot"> </div>
+            <div class="lorem4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim nemo ullam voluptates
+                expedita quod. Quod, corporis nostrum. Doloremque, aut accusamus. Illo voluptatem nam repellat ea porro
+                quis obcaecati molestias ut.</div>
         </div>
-
-        <div class="bottom">
-            <div class="left-bars">
-                <span class="bar"></span>
-            </div>
-
-            <div class="right-bars">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+        <div class="lower4">
+            <div class="dash leftside"></div>
+            <div class="right-dash">
+                <div class="dash"></div>
+                <div class="dash"></div>
+                <div class="dash"></div>
             </div>
         </div>
+
+    </div>
     </div>
 
+    <div class="holygrail">
 
-    <div class="page">
-        <header>Holy Grail Layout Demo</header>
-
-        <main>
+        <header>Holy Grail Layout demo</header>
+        <div class="content">
             <nav>
-                <h2>Navigation</h2>
+                <h3>Navigation</h3>
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Services</li>
-                    <li>Portfolio</li>
-                    <li>Blog</li>
-                    <li>Contact</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-
-            <section class="content">
+            <main>
                 <h1>Welcome to the Holy Grail Layout</h1>
-                <p>
+                <p class="lead">
                     This is a demonstration of the classic "Holy Grail" layout pattern implemented using CSS Flexbox.
-                    The layout consists of a header, footer, and three columns. The center column contains the main
-                    content, while the left and right columns contain supplemental content.
+                    The Holy Grail layout is a web page layout that consists of a header, footer, and three columns.
+                    The center column contains the main content, while the left and right columns contain supplementary
+                    content like navigation or advertisements.
                 </p>
-
-                <div class="card">
+                <section class="card">
                     <h2>Key Features</h2>
                     <p>
-                        The footer stays at the bottom of the viewport when content is short, and moves down (requires
-                        scrolling) when content is long.
+                        This layout demonstrates several important web development concepts including flexible content
+                        areas,
+                        sticky footer positioning, and responsive design principles that adapt to different screen
+                        sizes.
                     </p>
-                </div>
+                </section>
 
-                <!-- Add more paragraphs here to test scrolling -->
-                <!-- <p>Lorem ipsum...</p> -->
-            </section>
-
+            </main>
             <aside>
-                <h2>Sidebar</h2>
-
-                <div class="card">
-                    <h2>Quick Info</h2>
-                    <p>This sidebar demonstrates how flexible columns work.</p>
-                </div>
-
-                <div class="card">
-                    <h2>Latest News</h2>
-                    <p>Sample content showing how widgets and secondary info can be displayed.</p>
-                </div>
+                <h3 class="sidebar-title">Sidebar</h3>
+                <section class="widget">
+                    <h4 class="widget-title">Quick Info</h4>
+                    <p>
+                        This sidebar demonstrates how flexible content areas work in the Holy Grail
+                        layout.
+                    </p>
+                </section>
+                <section class="widget">
+                    <h4 class="widget-title">Latest News</h4>
+                    <p>
+                        Sample content showing how widgets and secondary information can be displayed.
+                    </p>
+                </section>
             </aside>
-        </main>
+        </div>
+        <footer></footer>
 
-        <footer>© 2025 Holy Grail Layout Demo. Built with CSS Flexbox.</footer>
-    </div>
+        <!-- NAV -->
+        <nav class="topnav">
+            <ul class="menu">
+                <li class="item"><a href="#">Home</a></li>
+                <li class="item"><a href="#">Products</a></li>
+
+                <li class="item dropdown">
+                    <a href="#">Services</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Web Development</a></li>
+                        <li><a href="#">Mobile Apps</a></li>
+                        <li><a href="#">Digital Marketing</a></li>
+                        <li><a href="#">Consulting</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+                </li>
+
+                <li class="item"><a href="#">About</a></li>
+                <li class="item"><a href="#">Contact</a></li>
+
+                <!-- push items after this to the right -->
+                <li class="spacer"></li>
+
+                <li class="item"><a href="#">Account</a></li>
+                <li class="item"><a href="#">Cart (2)</a></li>
+            </ul>
+        </nav>
+
+        <!-- MAIN CONTENT (to show dropdown overlays it) -->
+        <main class="page">
+            <div class="content-card">
+                <h1>Welcome to Our Website</h1>
+                <p>
+                    Dropdown menus appear on top of this content when you hover. This demonstrates a
+                    professional horizontal menu with left and right aligned items and properly positioned
+                    dropdown menus.
+                </p>
+            </div>
+        </main>
+        <div class="page">
+            <form class="contact-form">
+                <h2>Contact Form</h2>
+                <p class="subtitle">Get in touch with us</p>
+
+                <div class="row">
+                    <div class="field">
+                        <label>First Name</label>
+                        <input type="text">
+                    </div>
+                    <div class="field">
+                        <label>Last Name</label>
+                        <input type="text">
+                    </div>
+                </div>
+
+                <div class="field">
+                    <label>Email Address</label>
+                    <input type="email">
+                </div>
+
+                <div class="row">
+                    <div class="field">
+                        <label>Subject</label>
+                        <select>
+                            <option>Select a topic</option>
+                        </select>
+                    </div>
+                    <div class="field">
+                        <label>Priority</label>
+                        <select>
+                            <option>Low</option>
+                            <option>Medium</option>
+                            <option>High</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="field">
+                    <label>Message</label>
+                    <textarea placeholder="Tell us how we can help..."></textarea>
+                </div>
+
+                <div class="field">
+                    <label>Contact Preferences</label>
+                    <div class="checkboxes">
+                        <label><input type="checkbox"> Email Updates</label>
+                        <label><input type="checkbox"> Phone Follow-up</label>
+                        <label><input type="checkbox"> Newsletter</label>
+                    </div>
+                </div>
+
+                <div class="actions">
+                    <button type="button" class="secondary">Save Draft</button>
+                    <button type="submit" class="primary">Send Message</button>
+                </div>
+            </form>
+        </div>
+
+
 
 
 </body>
+
 
 </html>
