--- a/css-position/index.html
+++ b/css-position/index.html
@@ -24,6 +24,17 @@
 
         </div>
     </div>
+    <div class="background">
+        <div class="text" id="money">Money</div>
+        <div class="text" id="time">Time</div>
+        <div class="bar" id="bar-1"></div>
+        <div class="bar" id="bar-2"></div>
+        <div class="bar" id="bar-3"></div>
+        <div class="bar" id="bar-4"></div>
+        <div class="bar" id="bar-5"></div>
+        <div class="bar" id="bar-6"></div>
+    </div>
+
 
 
 
